<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/spinner_teach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_teach" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/what" />

    <EditText
        android:id="@+id/etAsk"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/answer" />

    <EditText
        android:id="@+id/etAnswer"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/btnCancle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/cancle" />

</LinearLayout>