<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@+drawable/main_background" >

    <EditText
        android:id="@+id/etShow"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.61"
        android:text="@string/setting" />

    <Button
        android:id="@+id/btnTeach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.43"
        android:text="@string/teachme" />

    <Button
        android:id="@+id/btnPause"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:text="@string/pause" />

</LinearLayout>